// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavFooter should render 1`] = `
<SideNavFooter
  assistiveText="open"
  expanded={false}
  onToggle={[MockFunction]}
>
  <footer
    className="bx--side-nav__footer"
  >
    <button
      className="bx--side-nav__toggle"
      onClick={[Function]}
      title="open"
      type="button"
    >
      <div
        className="bx--side-nav__icon"
      >
        <ForwardRef(ChevronRight20)>
          <Icon
            fill="currentColor"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 16L12 26 10.6 24.6 19.2 16 10.6 7.4 12 6z"
              />
            </svg>
          </Icon>
        </ForwardRef(ChevronRight20)>
      </div>
      <span
        className="bx--assistive-text"
      >
        open
      </span>
    </button>
  </footer>
</SideNavFooter>
`;

exports[`SideNavFooter should render 2`] = `
<SideNavFooter
  assistiveText="close"
  expanded={false}
  isExpanded={true}
  onToggle={[MockFunction]}
>
  <footer
    className="bx--side-nav__footer"
  >
    <button
      className="bx--side-nav__toggle"
      onClick={[Function]}
      title="close"
      type="button"
    >
      <div
        className="bx--side-nav__icon"
      >
        <ForwardRef(ChevronRight20)>
          <Icon
            fill="currentColor"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 16L12 26 10.6 24.6 19.2 16 10.6 7.4 12 6z"
              />
            </svg>
          </Icon>
        </ForwardRef(ChevronRight20)>
      </div>
      <span
        className="bx--assistive-text"
      >
        close
      </span>
    </button>
  </footer>
</SideNavFooter>
`;
